--- a/index.html
+++ b/index.html
@@ -8,6 +8,89 @@
     <title>2Checkpoint</title>
 </head>
 <body>
-    <header><h1>Checkpoint 2</h1></header>    
+    <header><h1>Direcionando o Turista</h1></header> 
+    <main>
+        <Section>
+            <article>
+                <p> O pequeno formulario abaixo lhe ajudarah a escolher os melhores pontos turisticos
+
+
+                </p>
+                <fieldset>
+                    <form action="#" method="post">      
+                        <fieldset>
+                            <legend>Dados Cliente</legend>
+                            <label for="email">Email: </label>
+                                <input type="email" name="email" id="email" placeholder="Insira seu email" required>
+                            <label for="nome">Nome: </label>
+                                <input type="text" name="nome" id="nome">
+                            <label for="data">Data de Nascimento: </label>
+                                <input type="datetime-local" name="data" id="data">
+                        </fieldset>
+                        <fieldset>
+                            <legend>Maioridade</legend>
+                            <label for="maioridade">Maior de Idade</label>    
+                                <input type="radio" name="maioridade" id="maior_idade">
+                            <label for="maioridade">Menor de Idade</label>  
+                                <input type="radio" name="maioridade" id="menor_idade">
+                        </fieldset>
+
+
+                        <fieldset>
+                            <legend>O que deve ver em nossa cidade</legend>
+                            <select name="locais" id="locais">
+                            <option value="">Escolha uma opção</option>
+                            <optgroup label="Locais">
+                                <option value="Mineirao">Mineirao</option>
+                                <option value="Feira_Hippie">Feira Hippie</option>
+                                <option value="Centro_Historico">Centro Historico</option>
+                                <option value="Parque_Mangabeiras"> Cicuito Praca da Liberdade</option>
+                                <option value="Praca_Papa">Praca do Papa</option>
+                                <option value="MercadoCentral">Mercado Central</option>       
+                            </optgroup>
+                            <optgroup label="Parques">
+                                <option value="ParqueEcoLinsRêgo">Parque Ecológico Francisco Lins do Rêgo</option>
+                                <option value="Feira_Hippie">Parque Municipal Fazenda Lagoa do Nado</option>
+                                <option value="Centro_Historico">Parque Nossa Senhora da Piedade</option>
+                                <option value="par_NossaSenhora">Parque dos Mangabeiras</option>
+                                <option value="par_JacCoust">Parque Municipal Jacques Cousteau</option>
+                                <option value="par_cassia">Parque Cássia Eller</option>       
+                            </optgroup>
+
+
+                            </select>
+                        </fieldset>
+
+                        <fieldset>
+                            <legend> Qual eh o proposito de sua visita</legend>
+                            <input type="checkbox" name="Turista" id="Turista">
+                            <label for="Turista">Turista</label>
+                            <input type="checkbox" name="Residente" id="Residente">
+                            <label for="Residente">Residente</label>
+                            <input type="checkbox" name="Estudante" id="Estudante">
+                            <label for="Estudante">Estudante</label>
+                        </fieldset>
+
+                        <button type="submit">Enviar</button>
+                        <button type="reset">Cancelar</button>
+
+                    </form> 
+                </fieldset>
+            </article>
+
+
+
+
+        </Section>
+
+
+
+
+    </main>
+    
+
+
+
+
 </body>
 </html>
