--- a/index2f.html
+++ b/index2f.html
@@ -12,20 +12,20 @@
     <main>
         <Section>
             <article>
-                <p> O pequeno formulario abaixo lhe ajudarah a escolher os melhores pontos turisticos
+                <p> O formulahrio abaixo lhe ajudarah a escolher os melhores pontos turihsticos
 
 
                 </p>
                 <fieldset>
                     <form action="#" method="post">      
                         <fieldset>
-                            <legend>Dados Cliente</legend>
-                            <label for="email">Email: </label>
+                            <legend>Dados do Cliente</legend>
+                            <label for="email">E-mail: </label>
                                 <input type="email" name="email" id="email" placeholder="Insira seu email" required>
                             <label for="nome">Nome: </label>
                                 <input type="text" name="nome" id="nome">
                             <label for="data">Data de Nascimento: </label>
-                                <input type="datetime-local" name="data" id="data">
+                                <input type="date" name="data" id="data">
                         </fieldset>
                         <fieldset>
                             <legend>Maioridade</legend>
@@ -37,14 +37,14 @@
 
 
                         <fieldset>
-                            <legend>O que deve ver em nossa cidade</legend>
+                            <legend>O que deseja ver em nossa cidade</legend>
                             <select name="locais" id="locais">
                             <option value="">Escolha uma opção</option>
                             <optgroup label="Locais">
                                 <option value="Mineirao">Mineirao</option>
                                 <option value="Feira_Hippie">Feira Hippie</option>
                                 <option value="Centro_Historico">Centro Historico</option>
-                                <option value="Parque_Mangabeiras"> Cicuito Praca da Liberdade</option>
+                                <option value="Parque_Mangabeiras"> Circuito Praca da Liberdade</option>
                                 <option value="Praca_Papa">Praca do Papa</option>
                                 <option value="MercadoCentral">Mercado Central</option>       
                             </optgroup>
