--- a/conteudo.html
+++ b/conteudo.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Belo Horizonte</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -24,12 +24,7 @@
             </p>
         </section>
 
-        <section class="video">
-            <iframe width="1280" height="720" src="https://www.youtube.com/embed/IhJc45Ivexo" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-            clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-            allowfullscreen></iframe>    
-        </section>
+
 
         <section class="curiosidades">
             <h2>Curiosidades</h2>
