enfim e la vamos

--- a/paginas/confirmacao.html
+++ b/paginas/confirmacao.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style3i.css">
-    <title>CheckPoint 2 - João Eloi, Mario Braga e Wirley Almeida</title>
+    <title>checkPoint 2 - Joao Eloi, Mario Braga, Wirley Almeida</title>
 
 
 </head>
@@ -19,18 +19,21 @@
     <main>
         <aside>
             <ul class="lista">
-                <li><a href="./index.html"> Belo Horizonte</a></li>
+                <li><a href="../index.html"> Belo Horizonte</a></li>
                 <li><a href="../paginas/form.html"> Formulários</a></li>
                 <li><a href="../paginas/festivais.html"> Festivais</a></li>
             </ul>
         </aside>
         <section>
             <article>
-                <section class="box">
-                    <iframe class="video" width="1280" height="720" src="https://www.youtube.com/embed/IhJc45Ivexo" 
-                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-                    clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                    allowfullscreen></iframe>    
+                <section class="boxform">
+                    <article id="confirm">
+                        <h2 > Formulário enviado com sucesso!
+               
+                        </h2>
+
+                    </article>
+
                 </section>
             </article>
         </section>
@@ -39,9 +42,9 @@
         <div class="footer-box">
             <p>2° CheckPoint - Front-End 1, 2021, João Eloi, Mario Braga e Wirley Almeida -  </p>
                 <div class="redes_sociais">
-                <p>Canais Oficiais </p>
-                    <a href="https://www.instagram.com/belohorizontemg/?hl=pt-br" target="_blank"><img src="./img/instagram.png" width="25px"></a>
-                    <a href="https://twitter.com/belohorizonte?lang=pt" target="_blank"><img src="./img/twiter.png"width="25px"></a>
+                <p>Canais Oficiais :</p>
+                    <a class="rs" href="https://www.instagram.com/belohorizontemg/?hl=pt-br" target="_blank"><img src="../img/instagram.png" width="25px"></a>
+                    <a class="rs" href="https://twitter.com/belohorizonte?lang=pt" target="_blank"><img src="../img/twiter.png"width="25px"></a>
                 </div> 
         </div>
     </footer>
