--- a/paginas/festivais.html
+++ b/paginas/festivais.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style3i.css">
-    <title>checkbox 2 - Joao Eloi, Mario Braga, Wirley Almeida</title>
+    <link rel="stylesheet" href="../css/style3i.css">
+    <title>checkPoint 2 - Joao Eloi, Mario Braga, Wirley Almeida</title>
 
 
 </head>
@@ -19,9 +19,9 @@
     <main>
         <aside>
             <ul class="lista">
-                <li><a href="./index.html"> Belo Horizonte</a></li>
-                <li><a href="./form.html"> Formulários</a></li>
-                <li><a href="./festivais.html"> Festivais</a></li>
+                <li><a href="../index.html"> Belo Horizonte</a></li>
+                <li><a href="../paginas/form.html"> Formulários</a></li>
+                <li><a href="../paginas/festivais.html"> Festivais</a></li>
             </ul>
         </aside>
         <section>
@@ -41,11 +41,11 @@
     </main>
     <footer>
         <div class="footer-box">
-            <p>2° CheckPoint - Front-End 1, 2021, Joao, Mario e Wirley -  </p>
+            <p>2° CheckPoint - Front-End 1, 2021, João Eloi, Mario Braga e Wirley Almeida-  </p>
                 <div class="redes_sociais">
                 <p>Canais Oficiais </p>
-                    <a href="https://www.instagram.com/belohorizontemg/?hl=pt-br" target="_blank"><img src="./img/instagram.png" width="25px"></a>
-                    <a href="https://twitter.com/belohorizonte?lang=pt" target="_blank"><img src="./img/twiter.png"width="25px"></a>
+                    <a href="https://www.instagram.com/belohorizontemg/?hl=pt-br" target="_blank"><img src="../img/instagram.png" width="25px"></a>
+                    <a href="https://twitter.com/belohorizonte?lang=pt" target="_blank"><img src="../img/twiter.png"width="25px"></a>
                 </div> 
         </div>
     </footer>
