--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <main>
         <aside>
             <ul class="lista">
-                <li><a href="../index.html"> Belo Horizonte</a></li>
-                <li><a href="../paginas/form.html"> Formulários</a></li>
-                <li><a href="../paginas/festivais.html"> Festivais</a></li>
+                <li><a href="./index.html"> Belo Horizonte</a></li>
+                <li><a href="./paginas/form.html"> Formulários</a></li>
+                <li><a href="./paginas/festivais.html"> Festivais</a></li>
             </ul>
         </aside>
         <section>
