--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <aside>
             <ul class="lista">
                 <li><a href="./index.html"> Belo Horizonte</a></li>
-                <li><a href="./paginas/form.html"> Formulários</a></li>
-                <li><a href="./paginas/festivais.html"> Festivais</a></li>
+                <li><a href="../FE-checkpoint-2/paginas/form.html"> Formulários</a></li>
+                <li><a href="../FE-checkpoint-2/paginas/festivais.html"> Festivais</a></li>
             </ul>
         </aside>
         <section>
