--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <aside>
             <ul class="lista">
-                <li><a href="./index.html"> Belo Horizonte</a></li>
+                <li><a href="../FE-checkpoint-2/index.html"> Belo Horizonte</a></li>
                 <li><a href="../FE-checkpoint-2/paginas/form.html"> Formulários</a></li>
                 <li><a href="../FE-checkpoint-2/paginas/festivais.html"> Festivais</a></li>
             </ul>
