--- a/paginas/form.html
+++ b/paginas/form.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style3i.css">
-    <title>checkPoint 2 - Joao Eloi, Mario Braga, Wirley Almeida</title>
+    <title>checkPoint 2 - João Eloi, Mario Braga e Wirley Almeida</title>
 
 
 </head>
